<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>io.github.kandefromparis.shyrka</groupId>
    <artifactId>gcvp</artifactId>
    <version>1.0-SNAPSHOT</version>
    <packaging>jar</packaging>
    <scm>
        <connection>scm:git:git://github.com/kanedafomparisfriends/gcvp.git</connection>
        <developerConnection>scm:git:git://kanedafomparisfriends/fabric8io/gcvp.git</developerConnection>
        <url>git://github.com/kanedafomparisfriends/gcvp.git</url>
    </scm>
    <issueManagement>
        <system>GitHub</system>
        <url>https://github.com/kanedafomparisfriends/gcvp/issues/</url>
    </issueManagement>
    <properties>
        <maven.compiler.source>1.8</maven.compiler.source>
        <maven.compiler.target>1.8</maven.compiler.target>
        <java.version>1.8</java.version>        
        <docker.maven.plugin.version>0.23.0</docker.maven.plugin.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <exec.mainClass>io.github.kandefromparis.shyrka.gcvp.GCVP</exec.mainClass>
        <podName>mypod</podName>
        <!-- <masterUrl>https://localhost:8443/</masterUrl> -->
        <namespace>shyrka</namespace>
    </properties>
    <dependencies>
        <dependency>
          <groupId>org.slf4j</groupId>
          <artifactId>slf4j-api</artifactId>
          <version>1.8.0-beta1</version>
        </dependency>
        <dependency>
          <groupId>org.slf4j</groupId>
          <artifactId>slf4j-log4j12</artifactId>
          <version>1.8.0-beta1</version>
        </dependency>
        <dependency>
        <groupId>org.slf4j</groupId>
        <artifactId>slf4j-jdk14</artifactId>
        <version>1.8.0-beta1</version>
        </dependency>
        <dependency>
            <groupId>io.fabric8</groupId>
            <artifactId>kubernetes-model</artifactId>
            <version>2.0.8</version>
            <type>jar</type>
        </dependency>
        <dependency>
            <groupId>io.fabric8</groupId>
            <artifactId>kubernetes-client</artifactId>
            <version>3.1.8</version>
            <type>jar</type>
        </dependency>
        <dependency>
            <groupId>io.fabric8</groupId>
            <artifactId>openshift-client</artifactId>
            <version>3.1.8</version>
            <type>jar</type>
        </dependency>
        <dependency>
            <groupId>io.fabric8</groupId>
            <artifactId>kubernetes-assertions</artifactId>
            <version>3.0.8</version>
            <type>jar</type>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.12</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.hamcrest</groupId>
            <artifactId>hamcrest-core</artifactId>
            <version>1.3</version>
            <scope>test</scope>
        </dependency>
        <!-- https://mvnrepository.com/artifact/io.fabric8/kubernetes-server-mock -->
        <dependency>
            <groupId>io.fabric8</groupId>
            <artifactId>kubernetes-server-mock</artifactId>
            <version>3.1.8</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-lang3</artifactId>
            <version>3.4</version>
            <type>jar</type>
        </dependency>
        <dependency>
            <groupId>io.fabric8</groupId>
            <artifactId>openshift-server-mock</artifactId>
            <version>3.1.8</version>
        </dependency>
    </dependencies>
    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.0.2</version>
                <configuration>
                    <archive>
                        <manifest>
                            <addClasspath>true</addClasspath>
                            <classpathPrefix>lib/</classpathPrefix>
                            <mainClass>${exec.mainClass}</mainClass>
                        </manifest>
                    </archive>
                </configuration>
            </plugin>
             <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-dependency-plugin</artifactId>
                <version>3.0.2</version>
                <executions>
                    <execution>
                        <id>copy-dependencies</id>
                        <phase>prepare-package</phase>
                        <goals>
                            <goal>copy-dependencies</goal>
                        </goals>
                        <configuration>
                            <outputDirectory>${project.build.directory}/lib</outputDirectory>
                            <overWriteReleases>false</overWriteReleases>
                            <overWriteSnapshots>false</overWriteSnapshots>
                            <overWriteIfNewer>true</overWriteIfNewer>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
            <!-- plugin>
                <groupId>io.fabric8</groupId>
                <artifactId>docker-maven-plugin</artifactId>
                <version>${docker.maven.plugin.version}</version>
                <extensions>true</extensions>
                
            </plugin -->
            <plugin>
                <groupId>io.fabric8</groupId>
                <artifactId>fabric8-maven-plugin</artifactId>
                <version>3.3.0</version>
                <executions>
                    <execution>
                        <id>fmp</id>
                        <goals>
                            
                            <goal>resource</goal>
                            <goal>helm</goal>
                            <goal>build</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    
                    <resources>
                        <labels> 
                            <!-- @Todo clarify the label stg -->
                            <all> 
                                <property> 
                                    <name>artifactId</name>
                                    <value>${project.artifactId}</value>
                                </property>
                                <property> 
                                    <name>version</name>
                                    <value>${project.version}</value>
                                </property>
                            </all>
                        </labels>

                        <annotations>          
                        </annotations>
                    </resources>
                    <!--machine>
                        <name>${project.artifactId}</name>
                        <autoCreate>true</autoCreate>
                        <createOptions>
                            <driver>virtualbox</driver>
                            <virtualbox-cpu-count>2</virtualbox-cpu-count>
                        </createOptions>
                    </machine-->
                    <images>
                        <image>                            
                            <name>kanedafromparis/${project.artifactId}:${project.version}</name>
                            <build> 
                                
                                <from>openjdk:8-jre-alpine3.7</from> 
                                <assembly>
                                    <mode>dir</mode>
                                    <targetDir>/opt/${project.artifactId}</targetDir>
                                    <!-- name>kanedafromparis/${project.artifactId}:${project.version}</name -->
                                    <descriptor>../assembly/docker-assembly.xml</descriptor>
                                </assembly>
                                <maintainer></maintainer>
                                <workdir>/opt/${project.artifactId}</workdir>
                                <env>
                                    <JVM_OPTIONS>-Djava.security.egd=file:/dev/./urandom \ 
                                        -XX:+UnlockExperimentalVMOptions \ 
                                        -XX:+UseCGroupMemoryLimitForHeap \
                                        -XX:MaxRAMFraction=2 -XshowSettings:vm
                                    </JVM_OPTIONS>                                    
                                </env>
                                <labels>
                                    <io.github.kanedafromparisfriends-label-status>gcvp</io.github.kanedafromparisfriends-label-status>
                                    <version>${project.version}</version>
                                    <artifactId>${project.artifactId}</artifactId>
                                </labels>
                                <entryPoint>
                                    <shell>java $JVM_OPTIONS \
                                        -cp .:lib \
                                        -jar /opt/${project.artifactId}/${project.artifactId}-${project.version}.jar</shell>                                    
                                </entryPoint>
                                
                            </build>
                          
                            <!-- there is no run since it should work has a cron job -->
                            <run />
                        </image>
                    </images>
                    <enricher>
                        <config>
                            <!-- vertx-health-check>
                                <path>/healthz</path>                                
                            </vertx-health-check -->
                            <fmp-revision-history>
                                <limit>8</limit>
                            </fmp-revision-history>
                        </config>
                    </enricher>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>